--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <p>Alias voluptates commodi eligendi perspiciatis non ipsam numquam, perferendis fugiat amet molestias provident unde, deleniti quo ducimus placeat voluptas! Quos amet, aliquam, reiciendis porro eos voluptates maiores.</p>
           <p>Culpa consequatur labore, adipisci asperiores impedit tenetur quam ab dicta recusandae quas nobis reprehenderit necessitatibus placeat corporis enim aliquid sequi saepe.</p>
         </div>
-        <div class="about__vertical-line"></div>
+       <!--<div class="about__vertical-line"></div>--> 
         <div class="about__image">
           <img src="assets/img/img-lamp-webdev.png">
         </div>
