ALL (without animation&mobile version)

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
         </article>
       </div>
       <div class="posts__actions">
-        <a class="btn btn--primary" href="#">View all posts...</a>
+        <a class="btn btn--primary" href="">View all posts...</a>
       </div>
     </div>
   </section>
@@ -259,12 +259,27 @@
   <footer class="footer">
     <div class="footer__container">
       <div class="footer__social">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-        ::after
+        <a href="#">
+          <i class="fab fa-facebook-square">  
+          </i>
+        </a>
+        <a href="#">
+          <i class="fab fa-google-plus-square">  
+          </i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter-square">  
+          </i>
+        </a>
+        <a href="#">
+          <i class="fab fa-pinterest-square">  
+          </i>
+        </a>
+        <a href="#">
+          <i class="fab fa-flickr">  
+          </i>
+        </a>
+        
       </div>
       <div class="footer__copy">
         <span>WE ARE REAL</span><br>
